# FzLauncherReborn

./: fabric-server-launcher.properties  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
src/: App.css  App.jsx  FzContext.jsx  I18n.js  Utils.js  main.jsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: auth.rs  extract.rs  interface_profile_game.rs  main.rs  task_manager.rs  utils.rs  zip_reader.rs
src-tauri/src/data/: profiles_internal.json
src/assets/css/: MinecraftText.css  index.css  progressBar.scss  style.css  superButton.css
src/assets/fonts/: poppins.css
src/assets/img/icons/: coffee.apng  cogs.jsx  directory.jsx  frazionz-logo.icns  home.jsx  import.jsx  search.jsx  settings.jsx  update.apng
src/assets/img/icons/network/: twitter_x.jsx
src/assets/languages/: en.json  fr.json  tuche.json
src/assets/translates/: FR.json  US.json
src/components/: AddProfilDialog.jsx  Alert.jsx  DoubleClickComponent.jsx  FzAuthTop.jsx  FzToast.jsx  FzVariable.jsx  Header.jsx  LateralModal.jsx  MineParse.jsx  SuperButton.jsx  Task.jsx  UserComponent.jsx
src/pages/: AppLayout.jsx  Login.jsx  Runtime.jsx  Updater.jsx
src/pages/auth/: AddAccount.jsx
src/pages/connected/: Layout.jsx
src/pages/connected/subpages/: ProfileGame.jsx  TaskManager.jsx
src/pages/connected/subpages/profiles/: Console.jsx  Mods.jsx  Rpacks.jsx  Screens.jsx  Settings.jsx
src/utils/: GameManager.js  GameType.js
src/utils/games_types/: Fabric.js  Forge.js  Quilt.js  Vanilla.js
